Fix too wide badgut

--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -34,6 +34,7 @@ $width-sm: 750px;
 
 img {
     vertical-align: middle;
+    max-width: 100%;
 }
 
 .container {
